test_report.txt

> starter_helpi@0.1.0 test
> react-scripts test --coverage

FAIL src/App.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/work/starter_helpi/starter_helpi/node_modules/ldrs/dist/index.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){export{default as bouncy}from"./elements/bouncy.js";export{default as bouncyArc}from"./elements/bouncyArc.js";export{default as cardio}from"./elements/cardio.js";export{default as chaoticOrbit}from"./elements/chaoticOrbit.js";export{default as dotPulse}from"./elements/dotPulse.js";export{default as dotSpinner}from"./elements/dotSpinner.js";export{default as dotStream}from"./elements/dotStream.js";export{default as dotWave}from"./elements/dotWave.js";export{default as grid}from"./elements/grid.js";export{default as hatch}from"./elements/hatch.js";export{default as helix}from"./elements/helix.js";export{default as hourglass}from"./elements/hourglass.js";export{default as infinity}from"./elements/infinity.js";export{default as jelly}from"./elements/jelly.js";export{default as jellyTriangle}from"./elements/jellyTriangle.js";export{default as leapfrog}from"./elements/leapfrog.js";export{default as lineSpinner}from"./elements/lineSpinner.js";export{default as lineWobble}from"./elements/lineWobble.js";export{default as metronome}from"./elements/metronome.js";export{default as mirage}from"./elements/mirage.js";export{default as miyagi}from"./elements/miyagi.js";export{default as momentum}from"./elements/momentum.js";export{default as newtonsCradle}from"./elements/newtonsCradle.js";export{default as orbit}from"./elements/orbit.js";export{default as ping}from"./elements/ping.js";export{default as pinwheel}from"./elements/pinwheel.js";export{default as pulsar}from"./elements/pulsar.js";export{default as quantum}from"./elements/quantum.js";export{default as reuleaux}from"./elements/reuleaux.js";export{default as ring}from"./elements/ring.js";export{default as ring2}from"./elements/ring2.js";export{default as ripples}from"./elements/ripples.js";export{default as spiral}from"./elements/spiral.js";export{default as square}from"./elements/square.js";export{default as squircle}from"./elements/squircle.js";export{default as superballs}from"./elements/superballs.js";export{default as tailChase}from"./elements/tailChase.js";export{default as tailspin}from"./elements/tailspin.js";export{default as treadmill}from"./elements/treadmill.js";export{default as trefoil}from"./elements/trefoil.js";export{default as trio}from"./elements/trio.js";export{default as waveform}from"./elements/waveform.js";export{default as wobble}from"./elements/wobble.js";export{default as zoomies}from"./elements/zoomies.js";import"./lib/LdrsBaseElement.js";import"./lib/scaleD.js";
                                                                                      ^^^^^^

    SyntaxError: Unexpected token 'export'

      1 | import "../CSS/modal.css";
      2 | import useChatGPT from "../hooks/useChatGPT";
    > 3 | import { waveform } from "ldrs";
        | ^
      4 | import { useEffect, useState } from "react";
      5 | import { useLocation } from "react-router-dom";
      6 |

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/QUIZ_COMPONENTS/Modal.tsx:3:1)
      at Object.<anonymous> (src/QUIZ_COMPONENTS/DetailedQuestionsComponents/Detailed.tsx:4:1)
      at Object.<anonymous> (src/App.tsx:3:1)
      at Object.<anonymous> (src/App.test.tsx:3:1)
      at TestScheduler.scheduleTests (node_modules/@jest/core/build/TestScheduler.js:333:13)
      at runJest (node_modules/@jest/core/build/runJest.js:404:19)
      at _run10000 (node_modules/@jest/core/build/cli/index.js:320:7)
      at runCLI (node_modules/@jest/core/build/cli/index.js:173:3)

-------------------------------------------------|---------|----------|---------|---------|-------------------
File                                             | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-------------------------------------------------|---------|----------|---------|---------|-------------------
All files                                        |       0 |        0 |       0 |       0 |                   
 src                                             |       0 |        0 |       0 |       0 |                   
  About.tsx                                      |       0 |      100 |       0 |       0 | 4                 
  App.tsx                                        |       0 |      100 |       0 |       0 | 11                
  Footer.tsx                                     |       0 |        0 |       0 |       0 | 6-26              
  Home.tsx                                       |       0 |        0 |       0 |       0 | 7-41              
  Navigation.tsx                                 |       0 |        0 |       0 |       0 | 7-10              
  Results.tsx                                    |       0 |        0 |       0 |       0 | 16-218            
  basicDetailedButton.tsx                        |       0 |        0 |       0 |       0 | 5-29              
  index.tsx                                      |       0 |      100 |     100 |       0 | 6-19              
  reportWebVitals.ts                             |       0 |        0 |       0 |       0 | 3-10              
 src/QUIZ_COMPONENTS                             |       0 |        0 |       0 |       0 |                   
  Modal.tsx                                      |       0 |        0 |       0 |       0 | 13-67             
  ProgressBar.tsx                                |       0 |      100 |       0 |       0 | 9-15              
 src/QUIZ_COMPONENTS/BasicQuestionsComponents    |       0 |        0 |       0 |       0 |                   
  Basic.tsx                                      |       0 |        0 |       0 |       0 | 32-124            
  MultipleChoiceQuestion.tsx                     |       0 |        0 |       0 |       0 | 27-33             
  RangeQuestion.tsx                              |       0 |        0 |       0 |       0 | 23-48             
 src/QUIZ_COMPONENTS/DetailedQuestionsComponents |       0 |        0 |       0 |       0 |                   
  Detailed.tsx                                   |       0 |        0 |       0 |       0 | 35-139            
  FreeResponse.tsx                               |       0 |        0 |       0 |       0 | 19-34             
  MultipleChoice.tsx                             |       0 |        0 |       0 |       0 | 26-51             
 src/hooks                                       |       0 |        0 |       0 |       0 |                   
  useChatGPT.ts                                  |       0 |        0 |       0 |       0 | 14-116            
  useQuizTools.ts                                |       0 |        0 |       0 |       0 | 30-124            
-------------------------------------------------|---------|----------|---------|---------|-------------------
Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        3.27 s
Ran all test suites.
